23 June 2008
+ Page templates can now control block type. The type can be image,
  document, media, or block. Block allows all three.
+ Dropping btype from the block. Not used.
+ Fixed bug if template only had one folder.
+ Added some new page templates.
+ Added some colorful pics to page template samples
+ Made single column different from text only icon.
+ Updated: templates/page_templates/
  templates/style.css


19 June 2008
+ Added Layout::cacheHeader functions to prevent document css from
  breaking on page caches.

Version 1.2.2
---------------------------------------------------------------
3 June 2008
+ Updated pagers to addSortHeaders.
+ Updated: templates/page_list.tpl

30 May 2008
+ Fixed direct access to page allowing view.

26 May 2008
+ Front page does not alter page title.

15 April 2008
+ Fixed some notices and a caching bug.

8 April 2008
+ Changed wording on edit text windows.

Version 1.2.1
---------------------------------------------------------------
20 March 2008
+ Added error message if blank page is attempted.

5 March 2008
+ PageSmith now allows the sorting of templates
+ Page titles now added to search.
+ Wrong page ids don't 404. Send to message page.
+ templates/page_templates/*, templates/pick_folder.tpl,
  templates/pick_template.tpl, templates/style.css,
  conf/folder_icons.php, img/folder_icons/*

27 February 2008
+ Search indexing added to update and version raised.

25 February 2008
+ Added search to pagesmith. Thanks Verdon.

20 February 2008
+ Changed to new url rewriting method.

Version 1.1.0
----------------------------------------------------------------
8 Feb 2008
+ Fixed call to getFile instead of getTag
+ Saving a page deletes its cache key.
+ Added threesec template
+ Updated: templates/page_templates/threesec/page.css
           "/page.tpl, "/structure.xml, "/threesec.png
                                             

6 February 2008
+ Pagesmith works with new File Cabinet

15 January 2008