@@ -1,0 +1,29 @@
+{START_FORM}
+<table cellpadding="5" width="100%">
+  <tr>
+    <td>{TEMPLATE_NAME_LABEL}</td>
+    <td>{TEMPLATE_NAME}</td>
+  </tr>
+  <tr>
+    <td>{TEMPLATE_FILE_LABEL}</td>
+    <td>{TEMPLATE_FILE}</td>
+  </tr>
+  <tr>
+    <td>{STYLE_SHEET_LABEL}</td>
+    <td>{STYLE_SHEET}</td>
+  </tr>
+  <tr>
+    <td>{ICON_LABEL}</td>
+    <td>{ICON}</td>
+  </tr>
+  <tr>
+    <td>{STRUCTURE_FILE_LABEL}</td>
+    <td>{STRUCTURE_FILE}</td>
+  </tr>
+  <tr>
+    <td></td>
+    <td></td>
+  </tr>
+</table>
+{UPLOAD}
+{END_FORM}
